2005-02-11  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pvsdemix.[ch]: New files from Victor Lazzarini

	* SConstruct: Added pvsdemic

2005-02-10	Istvan Varga	<istvan@csounds.com>
	* frontends/csound/csound_main.c
	* Top/argdecode.c:
	  Improved --sched option, now accepts a priority value (--sched=N).
	  Priority settings in the range 1 to 99 request the use of SCHED_RR,
	  zero is SCHED_OTHER (not real-time but still locks memory), and
	  -20 to -1 for setting nice level.
	* Opcodes/gab/vectorial.c:
	  Fixed sequence point warnings.

2005-02-10	Istvan Varga	<istvan@csounds.com>
	* InOut/rtjack:
	  Implemented JACK real time audio plugin (experimental).
	* InOut/libsnd.c:
	  Do not call audrecv() after opening sound input in sfopenin().
	* Engine/musmon.c:
	  Print correct maxamp info in cleanup(), even if performance is
	  terminated (e.g. by ^C) rather than finished normally.
	* SConstruct:
	  Added new options noDebug (do not add -g and -gstabs to CCFLAGS),
	  gcc3opt (add optimisation flags for gcc 3.3.x and later), and
	  useGprof (compile and link with -pg). All are disabled by default.
	  Changes to allow compilng JACK plugin.
	* Top/main.c:
	  Terminate (call longjmp()) if initialisation of modules has
	  failed for some reason.
	* Top/csound.c:
	  playopen_dummy() and recopen_dummy() now fail if --sched is used,
	  to avoid locking up the machine.
	  Expanded tabs to spaces.
	* Engine/oload.c:
	* H/csoundCore.h:
	* InOut/libsnd.c:
	* Top/argdecode.c:
	* Top/csound.c:
	  Use csoundGlobalVariable and csoundConfigurationVariable system
	  for new sound file ID tag options added by Michael Gogins, rather
	  than changing OPARMS, oload.c, argdecode.c, etc.
	  The options are now:
	    -+id_title
	    -+id_copyright
	    -+id_software
	    -+id_artist
	    -+id_comment
	    -+id_date
	  argdecode.c: expanded tabs to spaces

2005-02-09  Michael Gogins <gogins@pipeline.com>

	* Add long options to set ID tags in output soundfile: